Updated cmake conf and git confs;

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@
 *.so*
 *.dylib
 build
+
+a.out
+*.swp
+cmake-build-*/
+.idea/
+build*/
+*.wav
+*.dat
+*.raw
+*.zip
+*.7z
+*.tar
+*.tar.*
+*.rar
+.DS_Store
+CMakeFiles
+junk/
+*.pyc
+*.bin
+*venv*
+*egg-info*
+*wenv*
+dist/
