--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,28 @@
+cmake_minimum_required(VERSION 2.8.12)
 project(mbe)
-cmake_minimum_required(VERSION 2.6)
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
+
+option(NATIVE OFF)
+
+if (NOT "Debug" STREQUAL "${CMAKE_BUILD_TYPE}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG -Ofast -Wall -fno-dwarf2-cfi-asm -fno-asynchronous-unwind-tables -fomit-frame-pointer -ftree-vectorize")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG -Ofast -Wall -fno-dwarf2-cfi-asm -fno-asynchronous-unwind-tables -fomit-frame-pointer -ftree-vectorize")
+    include(TargetArch)
+    target_architecture(TARGET_ARCH)
+    if (NATIVE)
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native -mtune=native")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mtune=native")
+        if (TARGET_ARCH STREQUAL "aarch64")
+            set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mcpu=native")
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mcpu=native")
+        endif()
+    endif()
+
+    if (TARGET_ARCH MATCHES "(aarch64|x86)")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -momit-leaf-frame-pointer")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -momit-leaf-frame-pointer")
+    endif()
+endif()
 
 if(MSVC)
     # needed for M_PI macro
@@ -54,3 +77,6 @@ if (NOT DISABLE_TEST)
     enable_testing()
     add_subdirectory(test)
 endif()
+
+message("-- CMAKE_C_FLAGS=${CMAKE_C_FLAGS}")
+message("-- CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}")
